Javascript and Groovy examples, more objects, JSON Support, Tests, Documentation, Parts of https://github.com/membrane/service-proxy/issues/420, Refactorings (#440)